--- a/FirstProject.html
+++ b/FirstProject.html
@@ -248,7 +248,7 @@
 
 									<section class="features">
 										<article>
-											<a href="SecondProject.html" class="image"><img src="images/oilbaby.jpg" alt="" /></a>
+											<a href="SecondProject.html" class="image"><img src="images/Oilbaby.jpg" alt="" /></a>
 											<h3 class="major">Oilbaby</h3>
 											<p>Write about project here</p>
 											<a href="SecondProject.html" class="special">View project</a>
